--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,38 +1,18 @@
 page-home {
 
-	ion-item {
-		background-color: #000;
-		position: relative;
+.image-container {
+        min-height: 200px;
+        background-size: cover;
 	}
-
-	ion-item .video-loader {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		width: 25px;
-		height: 25px;
-	}
-
-	ion-list-header {
-		background-color: #fff;
-	}
-
-	ion-label {
-		margin: 0px !important;
-	}
-
-	ion-list {
-		margin: 0px !important;
-	}
-	ion-item-content, .item-inner, .item {
-		margin: 0 !important;
-		padding: 0 !important;
-		text-align: center;
-	}
-
-	video {
+	
+.app-font {
+    font-size: 10px;
+}
+	
+video {
 		max-width: 100%;
 		height: auto;
 		background-color: #000;
 	}
+
 }
